tests/ensure_parsed_dependency_saved_state/ensure_parsed_dependency_saved_state.exp
==== No errors at start====
No errors!

The Flow server is currently in lazy mode and is only checking 0/3 source files (+ 1/1 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes


==== ensure_parsed does not recheck unrelated dependent ====
No errors!

The Flow server is currently in lazy mode and is only checking 1/3 source files (+ 1/1 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes
==== No errors after restart====
No errors!

The Flow server is currently in lazy mode and is only checking 0/3 source files (+ 1/1 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes


==== ensure_parsed skips dependent ====
No errors!

The Flow server is currently in lazy mode and is only checking 1/3 source files (+ 1/1 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes

========Skipping stats========
Merge skipped 0 of 2 modules
Check will skip 0 of 1 files


==== force-recheck checks dependent ====
Error ------------------------------------------------------------------------------------------------- dependent.js:7:1

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]

   dependent.js:7:1
   7| 123 as string; // no error!
      ^^^ [1]

References:
   dependent.js:7:8
   7| 123 as string; // no error!
             ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 3/3 source files (+ 1/1 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes

========Skipping stats========
Merge skipped 0 of 3 modules
Check will skip 0 of 3 files


==== force-recheck on dependent finds errors ====
Error ------------------------------------------------------------------------------------------------- dependent.js:7:1

Cannot cast `123` to string because number [1] is incompatible with string [2]. [incompatible-type]

   dependent.js:7:1
   7| 123 as string; // no error!
      ^^^ [1]

References:
   dependent.js:7:8
   7| 123 as string; // no error!
             ^^^^^^ [2]



Found 1 error

The Flow server is currently in lazy mode and is only checking 3/3 source files (+ 1/1 libdefs).
To learn more, visit flow.org/en/docs/lang/lazy-modes

========Skipping stats========
Merge skipped 0 of 1 modules
Check will skip 0 of 1 files
